# Ninety-Nine-Haskell-Problems

./: .gitignore  LICENSE  Ninety-Nine-Haskell-Problems.cabal  README.md
01-10/: 02.hs  04.hs  05.hs  06.hs  09.hs
1-10/: 1.hs  10.hs  2.hs  3.hs  7.hs  8.hs
11-20/: 11.hs  12.hs  base.hs
