name:                Ninety-Nine-Haskell-Problems
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/martinney/Ninety-Nine-Haskell-Problems#readme
license:             MIT
license-file:        LICENSE
author:              Martin Ney
maintainer:          nielumartin@hotmail.com
copyright:           2017 Martin Ney
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/martinney/Ninety-Nine-Haskell-Problems#readme>

source-repository head
  type:     git
  location: https://github.com/martinney/Ninety-Nine-Haskell-Problems
